--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -23,5 +23,36 @@
 
 
 <sidebarjs-element>
-  Hello!
-</sidebarjs-element>
+    <div class="mt-10 ms-9 mb-5" routerLink="">
+        <img src="assets/logo.png" class="w-32" alt="companyLogo">
+    </div>    
+    <button routerLink="" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+       <span class="ms-9 text-xl font-['poppins']"> Home</span>
+    </button>
+    
+    <button routerLink="/about" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+        <span class="ms-9 text-xl font-['poppins']">About</span>
+     </button>
+    
+     <button routerLink="/listings" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+        <span class="ms-9 text-xl font-['poppins']"> Listings</span>
+     </button>
+    
+     <button routerLink="/sell" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+        <span class="ms-9 text-xl font-['poppins']">Sell</span>
+     </button>
+    
+    <button routerLink="/invest" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+        <span class="ms-9 text-xl font-['poppins']">Invest</span>
+     </button>
+    
+     <button routerLink="/blog" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+        <span class="ms-9 text-xl font-['poppins']">Blog</span>
+     </button>
+    
+     <button routerLink="/contact" class="hover:bg-[#0072C6] hover:text-white text-[#0072C6] text-left py-5 transition-all">
+        <span class="ms-9 text-xl font-['poppins']">Contact Us</span>
+     </button>
+    
+    </sidebarjs-element>
+    
