--- a/src/app/pages/blog/blog.component.html
+++ b/src/app/pages/blog/blog.component.html
@@ -4,14 +4,14 @@
     <div class="imageWrapper h-64 relative">
         <img class="object-cover w-full h-full" src="assets/blogHeadPicture.png" alt="blogImg">
         <div class="overlay absolute inset-0 flex items-center p-8">
-            <h3 class="ms-14 text-6xl font-bold text-black">The Blue Blogs</h3>
+            <h3 class="ms-16 md:ms-14 text-4xl md:text-6xl font-bold text-white">The Blue Blogs</h3>
         </div>
     </div>
 </section>
 
 <section class="w-[85%] mx-auto mt-14 mb-12">
 
-        <p class="font-['poppins'] text-4xl font-semibold text-[#0F2B8E] mb-10">Posts</p>
+        <p class="font-['poppins'] text-4xl text-center sm:text-left font-semibold text-[#0F2B8E] mb-10">Posts</p>
 
         <div class="flex justify-center">
     <div class="grid lg:grid-cols-3 md:grid-cols-2 grid-cols-1 gap-14">
