--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -45,6 +45,9 @@
 </section>
 
 <section>
+
+  <h3 class="text-center text-2xl sm:text-5xl font-semibold mt-16 mb-6 text-[#0F2B8E] font-['poppins']">Have Any Questions?</h3>
+  <p class="text-center text-xl font-['poppins'] text-[#3F3D56]">Reach out to the Blue Earth Team </p>
     <form class="shadow-xl" [formGroup]="contactFormData" (ngSubmit)="contactFormSubmit()">
 
         <div class="p-10">
