--- a/src/app/pages/invest/invest.component.html
+++ b/src/app/pages/invest/invest.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 
 <section class="w-[88%] mx-auto">
-  <h3 class="w-full mx-auto text-left p-2 pt-10">
+  <h3 class="w-full mx-auto investHead text-left p-2 pt-10">
     Get up to 50% on your investment by investing in Real Estate.
   </h3>
 
@@ -12,7 +12,7 @@
     of a Million Naira.
   </p>
 
-  <h4 class="mt-2 ps-2">Get Started</h4>
+  <h4 class="mt-2 ps-2 pt-2 sm:pt-0">Get Started</h4>
 
   <p class="investParagraph w-[99%] p-2">
     Get Started on any of the Partnership Packages below. Fill in your
@@ -26,8 +26,8 @@
   <h3 class="text-center mt-16 mb-4">Investment Plans</h3>
 
   <div class="flex justify-center">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-10">
-      <div class="card border w-[285px] ms-2 mt-14 md:mb-32 p-2 shadow-sm">
+    <div class="grid customGrid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 lg:gap-10">
+      <div class="card border w-[270px] ms-2 mt-14 md:mb-32 p-2 shadow-sm">
         <p class="cardHead text-center mt-5">Smart Investor</p>
 
         <div class="flex ms-8">
@@ -60,9 +60,9 @@
           </p>
         </div>
 
-        <div class="text-center mt-[5.2rem]">
+        <div class="text-center mt-[6.5rem]">
           <button
-            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-60"
+            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-56"
             (click)="investToday('Smart Investor')"
           >
             Start Today
@@ -70,7 +70,7 @@
         </div>
       </div>
 
-      <div class="card border w-[285px] ms-2 mt-14 md:mb-32 p-2 shadow-sm">
+      <div class="card border w-[270px] ms-2 mt-14 md:mb-32 p-2 shadow-sm">
         <p class="cardHead text-center mt-5">Premium Investor</p>
 
         <div class="flex ms-6">
@@ -103,9 +103,9 @@
           </p>
         </div>
 
-        <div class="text-center mt-[5.4rem]">
+        <div class="text-center mt-[6.5rem]">
           <button
-            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-60"
+            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-56"
             (click)="investToday('Premium Investor')"
           >
             Start Today
@@ -113,7 +113,7 @@
         </div>
       </div>
 
-      <div class="card border w-[285px] ms-2 mt-14 md:mb-32 p-2 shadow-sm">
+      <div class="card border w-[270px] ms-2 mt-14 md:mb-32 p-2 shadow-sm">
         <p class="cardHead text-center mt-5">Prestigious Investor</p>
 
         <div class="flex ms-8">
@@ -159,7 +159,7 @@
 
         <div class="text-center my-5">
           <button
-            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-60"
+            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-56"
             (click)="investToday('Prestigious Investor')"
           >
             Start Today
@@ -167,7 +167,7 @@
         </div>
       </div>
 
-      <div class="card border w-[285px] ms-2 mt-14 mb-32 p-2 shadow-sm">
+      <div class="card border w-[270px] ms-2 mt-14 mb-32 p-2 shadow-sm">
         <p class="cardHead text-center mt-5">Lifetime Partner</p>
 
         <div class="flex ms-14">
@@ -208,10 +208,10 @@
           <p class="cardTxt">This partnership is a lifetime partnership</p>
         </div>
 
-        <div class="text-center mt-[3.3rem]">
+        <div class="text-center mt-[4.6rem]">
 
           <button
-            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-60"
+            class="rounded duration-500 bg-[#0072C6] text-white hover:bg-[#289416] transition-all p-2 my-2 px-4 w-56"
             (click)="investToday('Lifetime Partner')"
           >
             Start Today
