--- a/src/app/pages/sell/sell.component.html
+++ b/src/app/pages/sell/sell.component.html
@@ -2,58 +2,58 @@
 
 <div class="w-[85%] mx-auto">
 
-    <div class="flex mt-20 items-center justify-center lg:justify-start">
-    <div class="grid grid-cols-1 lg:grid-cols-3 w-[90%]">
-<div class="py-16 lg:col-span-2">
-    <h3 class="w-full lg:w-[80%]">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
-    <p class="name">Oma Daniel</p>
-    <p class="italic description">Property Consierge at Blue Earth Properties </p>
+    <div class="flex mt-20 items-center gap justify-center lg:justify-start">
+    <div class="grid grid-cols-1  lg:grid-cols-2 w-full">
+<div class="lg:pr-10 lg:pt-20">
+    <h3 class="w-full lg:w-full">“We Focus on Helping Clients sell Property within 60 days or less.”</h3>
+    <p class="name text-lg mt-2">Oma Daniel</p>
+    <p class="italic description text-xl my-2">Property Consierge at Blue Earth Properties </p>
     <button class="p-2 px-4 my-5 text-white bg-[#0072C6] rounded hover:bg-[#289416] transition-all" (click)="toggleModal()" >Get Started</button>
 </div>
     
-<div class="aspect-w-16 aspect-h-9">
-<iframe class="mt-20 mb-20 w-full h-full lg:h-[300px] lg:w-[500px]" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+<div class="aspect-w-16 aspect-h-9 mb-10 md:mr-32 lg:mr-0 lg:ml-16">
+<iframe class="mt-20 mb-20 w-full h-full lg:h-[300px] lg:w-[450px]" src="https://www.youtube.com/embed/0alQNxvhQHI" title="September 12, 2023" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 </div>
 
 </div>
 </div>
 
-<h3 class="text-center my-6 sellHead">Want Your Property Sold Within 60 Days? Here’s How.</h3>
+<h3 class="text-center mt-20 my-6 sellHead">Want Your Property Sold Within 60 Days? Here’s How.</h3>
 
 <div class="flex justify-center mb-24">
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-10 py-3">
-        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+        <div class="card w-80  border-dashed shadow-md border hover:text-white hover:bg-[#0072C6] hover:border-none">
             <p class="cardNumber tag ">01</p>
             <p class="cardTitle tag ms-3">INITIAL CONSULTATION</p>
-           <p class="tag cardParagraph ms-3 w-[92%] mb-12">  Our journey begins with a conversation. We will 
+           <p class="tag cardParagraph text-sm ms-3 font-['poppins'] w-[90%] mb-12">  Our journey begins with a conversation. We will 
            sit with you to discuss your goals, timeline, and
            any specific need you have. This will help us to 
            create a customized strategy for your property.</p>
         </div>
-        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+        <div class="card w-80  border-dashed shadow-md border hover:text-white hover:bg-[#0072C6] hover:border-none">
             <p class="cardNumber tag ms-3">02</p>
             <p class="cardTitle tag ms-3">PROPERTY ASSESSMENT 
                 AND PREPARATION</p>
-           <p class="tag cardParagraph mb-12 ms-3 w-[92%]">  Our team of experts will visit your property to 
+           <p class="tag cardParagraph text-sm font-['poppins'] mb-12 ms-3 w-[90%]">  Our team of experts will visit your property to 
             assess its condition and identify any necessary
              improvement to maximize its appeal. We can also 
             connect you with trusted contractors to handle 
             these upgrades if required.</p>
         </div>
-        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+        <div class="card w-80  border-dashed shadow-md border hover:text-white hover:bg-[#0072C6] hover:border-none">
             <p class="cardNumber tag">03</p>
             <p class="cardTitle tag ms-3">STRATEGIC PRICING</p>
-           <p class="tag cardParagraph w-[92%] mb-12 ms-3"> We will conduct a thorough market analysis to 
+           <p class="tag cardParagraph text-sm font-['poppins'] w-[90%] mb-12 ms-3"> We will conduct a thorough market analysis to 
             determine the optimum pricing strategy for your 
             property. Our goal is to find the sweet spot that 
             attract buyers while ensuring you get the best value.</p>
         </div>
         
-        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+        <div class="card w-80  border-dashed shadow-md border hover:text-white hover:bg-[#0072C6] hover:border-none">
             <p class="cardNumber tag">04</p>
             
             <p class="cardTitle tag ms-3">MARKETING BLITZ</p>
-           <p class="tag cardParagraph w-[92%] mb-12 ms-3">  This is where our marketing magic begins. We will 
+           <p class="tag cardParagraph text-sm font-['poppins'] w-[90%] mb-12 ms-3">  This is where our marketing magic begins. We will 
             create stunning visuals, including professional 
             photos and virtual tours to showcase your
              property. Your listing will be featured on popular
@@ -61,19 +61,19 @@
             social media and traditional campaigns to reach
              potential buyers.</p>
         </div>
-        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+        <div class="card w-80  border-dashed shadow-md border hover:text-white hover:bg-[#0072C6] hover:border-none">
             <p class="cardNumber tag">05</p>
             <p class="cardTitle tag ms-3">SHOWINGS AND OPEN 
                 HOUSES</p>
-           <p class="tag cardParagraph w-[92%] mb-12 ms-3">  Our team will coordinate showing and open houses 
+           <p class="tag cardParagraph text-sm font-['poppins'] w-[90%] mb-12 ms-3">  Our team will coordinate showing and open houses 
             to give buyers the opportunity to experience your
              property in person. we will handle the logistics to 
             ensure a smooth process.</p>
         </div>
-        <div class="card w-96  border-dashed border-black border hover:text-white hover:bg-[#0072C6] hover:border-none">
+        <div class="card w-80 border-dashed border shadow-md hover:text-white hover:bg-[#0072C6] hover:border-none">
             <p class="cardNumber tag">06</p>
             <p class="cardTitle tag ms-3">CLOSING THE DEAL</p>
-           <p class="tag cardParagraph w-[92%] mb-12 ms-3">  Once we have accepted the offer, our team will 
+           <p class="tag cardParagraph text-sm font-['poppins'] w-[90%] mb-12 ms-3">  Once we have accepted the offer, our team will 
             guide you through the closing process, ensuring  all
              the necessary document are in order. We will be
              there every step of the way until the keys are 
@@ -91,9 +91,8 @@
 
     <div class="flex justify-between items-center">
     <h4>Contact Us</h4>
-    <a routerLink="/contact" class="hover:bg-[#0072C6] hover:text-white hover:shadow-sm hover:transition-all h-12 text-black text-lg rounded font-['poppins'] bg-white p-3">Contact Us</a>
-    </div>
-    <p class="contactParagraph">If you have further enquires or you would like to book a free consultation contact us</p>
+  </div>
+    <p class="contactParagraph w-full sm:w-[70%]">If you have further enquires or you would like to book a free consultation <span class="text-[#0072C6] cursor-pointer hover:text-green-500 transition-all" routerLink="/contact"> Contact Us </span> </p>
     
     
     </div>
