--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 
 <footer class="w-full">
-    <div class="w-[87%] mx-auto p-4">
+    <div class="w-[95%] sm:w-[87%] mx-auto p-4">
    
         <div class="flex justify-center md:justify-start items-center mt-10">
 
