--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -20,9 +20,9 @@
                 <div class="mt-10">
                     <div class="flex flex-col text-white">
                         <p class="footerHead">More</p>
-                        <p class="cursor-pointer">Faq</p>
+                        <p class="cursor-pointer" routerLink="/faq">Faq</p>
                         <p routerLink="/blog" class="cursor-pointer">Blog</p>
-                        <p class="cursor-pointer">Magazine</p>
+                        <p class="cursor-pointer" routerLink="/magazine">Magazine</p>
                         <p class="cursor-pointer">Media</p>
                     </div>
                     
