routing and modules updated

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-
+<ngx-loading-bar [height]="'3px'" [color]="'#F6F6F6'" [includeSpinner]="false" ></ngx-loading-bar>
 <router-outlet></router-outlet>
 
 
