--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -77,10 +77,8 @@
     <swiper-slide class="customSwiperSlide">
       <img src="assets/house.jpeg" class="" alt="houseImg" />
       <div class="overlay-text">
-        <h1 class="text-3xl md:text-7xl" data-aos="fade-up" data-aos-duration="3000">Welcome to Blue Earth Properties</h1>
-        <p class="font-['poppins'] text-base md:text-xl w-[90%] md:w-[55%] mt-5 font-extralight" data-aos="fade-down"
-     data-aos-easing="linear"
-     data-aos-duration="1500">
+        <h1 class="text-3xl md:text-7xl" data-aos="fade-up" data-aos-duration="2000">Welcome to Blue Earth Properties</h1>
+        <p class="font-['poppins'] text-base md:text-xl w-[90%] md:w-[55%] mt-5 font-extralight" data-aos="fade-up" data-aos-duration="2500">
           Blue Earth Properties is a registered credible and trusted real estate
           marketing and brokerage firm
         </p>
